force-app/main/default/objects/Transaction_History__c/Transaction_History__c.object-meta.xml
<CustomObject>
    <label>Transaction History</label>
    <nameField>
        <label>Transaction History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>