force-app/main/default/objects/Transaction_History__c/fields/Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Amount__c</fullName>
    <label>Transaction Amount</label>
    <length>200</length>
    <type>Text</type>
</CustomField>