force-app/main/default/objects/Transaction_History__c/fields/Transaction_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date_and_Time__c</fullName>
    <label>Transaction Date and Time</label>
    <type>DateTime</type>
</CustomField>