force-app/main/default/objects/Transaction_History__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <label>Transaction Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>